--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,19 @@ version: "3.8"
 
 services:
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     container_name: etl_postgres
     env_file: .env
     ports:
-      - "5432:5432"
+      - "5433:5432"
+    mem_limit: 512m
     volumes:
       - pgdata:/var/lib/postgresql/data
   
   prefect:
     image: prefecthq/prefect:3-latest
     container_name: etl_prefect
+    mem_limit: 2gb
     ports:
       - "4200:4200"
     command: prefect server start --host 0.0.0.0 --port 4200
@@ -22,6 +24,7 @@ services:
     depends_on:
       - postgres
     env_file: .env
+    mem_limit: 1gb
     environment:
       # nadpisanie tylko tego, co musi być inne wewnątrz kontenera
       - DB_HOST=postgres
@@ -32,6 +35,7 @@ services:
     depends_on:
       - postgres
     env_file: .env
+    mem_limit: 512m
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
@@ -41,6 +45,7 @@ services:
     depends_on:
       - postgres
     env_file: .env
+    mem_limit: 512m
     environment:
       - DB_HOST=postgres
       - DB_PORT=5432
