--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:15-alpine
@@ -26,29 +24,27 @@ services:
     env_file: .env
     mem_limit: 1gb
     environment:
-      # nadpisanie tylko tego, co musi być inne wewnątrz kontenera
       - DB_HOST=postgres
       - DB_PORT=5432
 
   aggregator:
     build: ./aggregator
+    ports:
+      - "8501:8501"
+    environment:
+      - DATABASE_URL=postgresql://etl_user:etl_pass@postgres:5432/etl_db
     depends_on:
       - postgres
-    env_file: .env
+      - analyzer
     mem_limit: 512m
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
 
   analyzer:
     build: ./analyzer
+    environment:
+      - DATABASE_URL=postgresql://etl_user:etl_pass@postgres:5432/etl_db
     depends_on:
       - postgres
-    env_file: .env
     mem_limit: 512m
-    environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
 
 volumes:
   pgdata:
